--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Build with Xalan
       run: mvn -P xalan exec:java -Dexec.mainClass=org.apache.fop.cli.Main -Dexec.args="-fo input.fo -out application/X-fop-intermediate-format target/areatree_xalan.xml"
     - name: Build with Saxon
-      run: mvn -P saxon exec:java -Dexec.mainClass=org.apache.fop.cli.Main -Dexec.args="-fo input.fo -xsl identity-xslt3.xsl -out application/X-fop-intermediate-format target/areatree_saxon.xml"
+      run: mvn -P saxon exec:java -Dexec.mainClass=org.apache.fop.cli.Main -Dexec.args="-in input.fo -xsl identity-xslt3.xsl -out application/X-fop-intermediate-format target/areatree_saxon.xml"
     - name: Xalan Areatree Result
       run: echo "$(<target/areatree_xalan.xml )"
     - name: Saxon Areatree Result
